<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_all_ex">Current Expense</string>
    <string name="action_yearly">Expense Report</string>
    <string name="action_print">Print DB Data</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_salary_storage">0</string>
    <string name="default_freelance_storage">0</string>
    <string name="default_bonus_storage">0</string>
    <string name="default_otherincome_storage">0</string>
    <string name="default_incentive_storage">0</string>
    <string name="default_gallery_storage">0</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_set_currency">Set Currency</string>
    <string name="summary_upload_video_quality">Specify your currency, Default currency is Rupee.</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">This Application is created keeping in mind the regular expenses we do on daily basis.</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="Salaryhint"><i>Please select you Currency in settings.</i></string>
    <string name="deschint"><i><font size='15'>What\'s this for?</font></i></string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_salary_storage">Add Monthly Salary</string>
    <string name="title_bonus_storage">Add Bonus</string>
    <string name="title_incentive_storage">Add Incentive</string>
    <string name="title_freelance_storage">Add Freelance Income</string>
    <string name="title_companionincome_storage">Add Companion Income</string>
    <string name="title_othermoney_storage">Add Other Money</string>
    <string name="title_new_notification_sound">Low Balance Notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_salary_name">key_salary_name</string>
    <string name="key_total_income">key_total_income</string>
    <string name="key_bonus_name">key_bonus_name</string>
    <string name="key_incentive_name">key_incentive_name</string>
    <string name="key_freelance_name">key_freelance_name</string>
    <string name="key_otherincome_name">key_otherincome_name</string>
    <string name="key_companionincome_name">key_companionincome_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>

    <string name="spinner_forwho">For?</string>
    <string name="spinner_period">This amount is for how many months?</string>
    <string name="spinner_items">Spent On</string>
    <string name="title_activity_all_expenses">All Expenses</string>
    <string name="title_activity_reports">ReportsActivity</string>
    <string name="title_activity_expenses_detail_view">ExpensesDetailViewActivity</string>

    <string name="openDrawer">Navigation</string>
    <string name="closeDrawer">Close Navigation</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
