<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General">
        <EditTextPreference
            android:defaultValue="@string/default_gallery_storage"
            android:key="@string/key_salary_name"
            android:summary="@string/default_salary_storage"
            android:inputType="numberDecimal"
            android:title="@string/title_salary_storage" />
        <EditTextPreference
            android:defaultValue="@string/default_bonus_storage"
            android:key="@string/key_bonus_name"
            android:inputType="numberDecimal"
            android:summary="@string/default_bonus_storage"
            android:title="@string/title_bonus_storage" />
        <EditTextPreference
            android:defaultValue="@string/default_freelance_storage"
            android:key="@string/key_freelance_name"
            android:summary="@string/default_freelance_storage"
            android:inputType="numberDecimal"
            android:title="@string/title_freelance_storage" />
        <EditTextPreference
            android:defaultValue="@string/default_incentive_storage"
            android:key="@string/key_incentive_name"
            android:summary="@string/default_incentive_storage"
            android:inputType="numberDecimal"
            android:title="@string/title_incentive_storage" />
        <EditTextPreference
            android:defaultValue="@string/default_gallery_storage"
            android:key="@string/key_companionincome_name"
            android:summary="@string/default_gallery_storage"
            android:inputType="numberDecimal"
            android:title="@string/title_companionincome_storage" />
        <EditTextPreference
            android:defaultValue="@string/default_otherincome_storage"
            android:key="@string/key_otherincome_name"
            android:summary="@string/default_otherincome_storage"
            android:inputType="numberDecimal"
            android:title="@string/title_othermoney_storage" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/notifications_new_message"
            android:title="@string/title_new_notification_sound" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="@string/key_notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:summary="@string/summary_choose_ringtone"
            android:title="@string/pref_title_ringtone" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        <!-- preference opens url in browser -->
        <Preference
            android:summary="@string/summary_faq"
            android:title="@string/title_faq">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_faq" />
        </Preference>

        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy" />
        </Preference>

        <Preference android:title="@string/title_terms">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_terms" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>